# GameEnginePoCs

./: .gitignore
Audio/: CMakeLists.txt
Audio/includes/: AudioEngine.h  AudioMixer.h  Sound.h
Audio/src/: AudioEngine.cpp  AudioMixer.cpp  Sound.cpp  main.cpp
FPSCounter/: CMakeLists.txt
FPSCounter/includes/: FPSCounter.h
FPSCounter/src/: FPSCounter.cpp  main.cpp
Physics/: CMakeLists.txt
Physics/includes/: Physics.h  PhysicsObject.h  PlayerController.h
Physics/src/: Physics.cpp  PhysicsObject.cpp  PlayerController.cpp  main.cpp
SceneManagement/: CMakeLists.txt  README.md
SceneManagement/includes/: Scene.h  SceneManager.h
SceneManagement/includes/Camera/: Camera.h
SceneManagement/includes/Element/: Button.h
SceneManagement/includes/Scenes/: CityScene.h  FirstScene.h  HouseScene.h  SecondScene.h  ThirdScene.h
SceneManagement/src/: Scene.cpp  SceneManager.cpp  main.cpp
SceneManagement/src/Camera/: Camera.cpp
SceneManagement/src/Element/: Button.cpp
SceneManagement/src/Scenes/: CityScene.cpp  FirstScene.cpp  HouseScene.cpp  SecondScene.cpp  ThirdScene.cpp
UIElement/: CMakeLists.txt  README.md
UIElement/include/: Color.h  Position.h  Rectangle.h  Scale.h  Size.h  Text.h  UIElementManager.h  Window.h
UIElement/include/Animation/: Animation.h  AnimationType.h  Keyframe.h
UIElement/include/Components/: Rectangle.h  Sprite.h  Text.h  UIElement.h  Window.h
UIElement/include/Utils/: Color.h  Position.h  Scale.h  Size.h
UIElement/src/: UIElementManager.cpp  main.cpp
UIElement/src/Animation/: Animation.cpp  Keyframe.cpp
UIElement/src/Components/: Rectangle.cpp  Sprite.cpp  Text.cpp  UIElement.cpp  Window.cpp
UIElement/src/Utils/: Color.cpp  Position.cpp  Scale.cpp  Size.cpp
VariableSpeed/: CMakeLists.txt  readme.md
VariableSpeed/includes/: Time.h
VariableSpeed/src/: main.cpp
